--- a/04. A Better CSS - LESS and SASS/project/SASS/After/css/My.scss
+++ b/04. A Better CSS - LESS and SASS/project/SASS/After/css/My.scss
@@ -15,7 +15,7 @@ html
 {
   font-family: 'Open Sans', verdana, helvetica, sans-serif;
   font-size: $mainColor;
-  foo: "this is inline #{4 + 6} number";
+  // foo: "this is inline #{4 + 6} number";
 }
 body
 {
